[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scenes/Menu/game_over.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="reset" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 256.0
margin/right = 1152.0
margin/bottom = 448.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reiniciar nivel"
flat = false

[node name="main_menu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 512.0
margin/right = 1152.0
margin/bottom = 704.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ir al men√∫ principal"
flat = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 576.0
margin/top = 64.0
margin/right = 704.0
margin/bottom = 192.0
text = "Game over"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]

[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]


